# otp-ai_final

./: .dockerignore  .env  .env.example  Dockerfile  README-RAILWAY.md  README.md  STRIPE_COMPLETE_SETUP.md  STRIPE_WEBHOOK_SETUP.md  ai_integration.py  app.py  auth.py  chatbot.py  create_admin.py  create_password_hash.py  cspell.json  diagnostic.py  env_validator.py  health.py  main.py  main_routes.py  models.py  payment.py  pyproject.toml  railway.json  requirements-railway.txt  requirements.txt  routes.py  seo_analyzer.py  translation.py  utils.py
static/css/: custom.css
static/js/: analyzer.js  chatbot.js  dashboard.js  main.js  profile.js  report.js
templates/: analyze.html  base.html  dashboard.html  error.html  index.html  login.html  macros.html  pricing.html  profile.html  register.html  report.html
translations/en/: messages.json
translations/fr/: messages.json
