[project]
name = "opt-ai-saas"
version = "0.1.0"
description = "Opt-AI SaaS - SEO Analysis and AI Recommendations"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.2.0",
    "flask-login==0.6.3",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "openai==1.77.0",
    "psycopg2-binary==2.9.10",
    "flask-wtf==1.2.2",
    "flask-cors==5.0.1",
    "flask-jwt-extended==4.7.1",
    "beautifulsoup4==4.13.4",
    "requests==2.32.3",
    "trafilatura==2.0.0",
    "stripe==12.1.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "lxml==5.4.0",
    "MarkupSafe==3.0.2",
    "packaging==25.0",
    "pillow==11.2.1",
    "reportlab==4.4.0",
    "soupsieve==2.7",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "Werkzeug==3.1.3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
